--- a/force-app/main/default/lwc/techProEdComp/techProEdComp.html
+++ b/force-app/main/default/lwc/techProEdComp/techProEdComp.html
@@ -24,4 +24,14 @@ API Callout
 
 </div>
 
+<div class="slds-text-title_caps slds-text-align_center slds-text-color_success slds-box slds-theme_default">
+
+    <input type="text" id="text-input-id-47" placeholder="Placeholder text…" required="" class="slds-input" onchange={isPalindrome}/><br/> <br/>
+    <button class="slds-button slds-button_brand" onclick={callRest}>Submit</button>
+    Output <br/>
+    {res}
+
+</div>
+
+
 </template>
