--- a/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -1,8 +1,13 @@
 <template>
-    <lightning-card title="HelloWorld" icon-name="custom:custom14">
-      <div class="slds-m-around_medium">
-        <p>Hello, {greeting}!</p>
-        <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
-      </div>
+  
+    <lightning-card  title="Hello, This is the TITLE!" icon-name="action:announcement">
+        <div class="slds-m-around_medium">
+            <h1> Hello World Welcome to Lightning Web Components</h1><br/>
+            <p>Hello! My name is {name}, I am {title} </p><br/>
+            <p>My Name is Zarina. Learning LWC for {experience}!</p>
+
+        </div>
+        
     </lightning-card>
-  </template>
+
+</template>
