--- a/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -6,6 +6,9 @@
             <p>Hello! My name is {name}, I am {title} </p><br/>
             <p>My Name is Zarina. Learning LWC for {experience}!</p>
 
+            <p>{greeting}</p>
+            <p> My name is {name}, I have {cert} certifications in salesforce.</p>
+
         </div>
         
     </lightning-card>
